--- a/sample.html
+++ b/sample.html
@@ -26,26 +26,29 @@
         <section>
           <h3 class="subtitle" id="introduction">자기소개</h3>
           <p>
-            안녕하세요 모다입니다~~
+            안녕하세요 모다입니다~~!!<br>
+
           </p>
         </section>
 
         <section>
           <h3 class="subtitle" id="my-gallery">나만의 갤러리</h3>
+
+          <h2>나의 필카 사진들</h2>
           <div>
-            <img class="gallery" src="./images/image1.jpeg" width="30%"/>
-            <img class="gallery" src="./images/image1.jpeg" width="30%"/>
-            <img class="gallery" src="./images/image1.jpeg" width="30%"/>
+            <img class="gallery" src="./images/gallery1.jpeg" width="30%"/>
+            <img class="gallery" src="./images/gallery2.jpeg" width="30%"/>
+            <img class="gallery" src="./images/gallery3.jpeg" width="30%"/>
           </div>
           <div>
-            <img class="gallery" src="./images/image1.jpeg" width="30%"/>
-            <img class="gallery" src="./images/image1.jpeg" width="30%"/>
-            <img class="gallery" src="./images/image1.jpeg" width="30%"/>
+            <img class="gallery" src="./images/gallery4.jpeg" width="30%"/>
+            <img class="gallery" src="./images/gallery5.jpeg" width="30%"/>
+            <img class="gallery" src="./images/gallery9.jpeg" width="30%"/>
           </div>
           <div>
-            <img class="gallery" src="./images/image1.jpeg" width="30%"/>
-            <img class="gallery" src="./images/image1.jpeg" width="30%"/>
-            <img class="gallery" src="./images/image1.jpeg" width="30%"/>
+            <img class="gallery" src="./images/gallery7.jpeg" width="30%"/>
+            <img class="gallery" src="./images/gallery6.jpeg" width="30%"/>
+            <img class="gallery" src="./images/gallery8.jpeg" width="30%"/>
           </div>
         </section>
 
@@ -57,24 +60,34 @@
               <img
                 src="./images/movie1.jpg"
                 width="200"
-                alt="그래비티 영화 포스터"
+                alt="위플래쉬 영화 포스터"
               />
             </div>
             <p>
-              감동적인 영화이다.
+              드럼을 좋아하는 머랭과 워니에게 추천하는 영화입니다.<br>
+              꿈은 많지만 기회가 없었던 드러머 앤드류 네이먼이 어느날 학교지존킹왕짱재즈밴드의전설적인지휘자 플레처 교수를 만납니다.<br>
+              첫날부터 따뜻하게 앤드류를 맞이해주고, 부모님의 직업을 물어보던 따뜻한 교수 플레처는 만난지 몇분만에 박자가 안 맞는다는 이유로 앤드류의 뺨을 때리고 부모님의 안부를 묻는 폭력교사의 면모를 보여주죠.<br>
+              앤드류는 그런 그에게 실망하고 힘들어하지만, 오히려 내면에 있던 광기와 자신을 향한 채찍질이 더욱 세지며 자신 안에 있는 또다른 플레처를 키웁니다.<br>
+              너무나 달라보이는 학생과 교수지만 꿈을 위해서라면 무엇도 마다하지 않는다는 점은 너무나 똑같은 두 사람이, 점점 동화되다가, 마지막에 찌르르 전기가 통하면서 맞추는 드럼 연주는 극도의 짜릿함을 남겨줍니다.<br> 
+              마침 조만간 돌비 시네마에서 재개봉도 한다니, 드럼의 비트와 함께 코딩으로 혼란스러운 마음을 평온하게 바꾸어보아요.<br>
             </p>
 
             <div class="thumbnail">
               <img
-                src="https://image.tmdb.org/t/p/w1280/u8ffl7CRAS12KA8eQEtkLuHg8Fm.jpg"
+                src="./images/movie2.jpeg"
                 width="200"
-                alt="그래비티 영화 포스터"
+                alt="로봇드림 영화 포스터"
               />
             </div>
             <p>
-              알폰소 쿠아론 감독이 연출하고 샌드라 불럭이 주연으로 출연하는 영화 「그래비티」는 우주 정거장에서 임무
-              수행 중 고립된 한 우주인의 생존과 귀환을 그린 작품이다. 대학생 시절 처음 본 이 영화는 당시엔 그저 지루한
-              우주 영화였다. 그런데 이 영화를 다시 보니, 마치 내 미래를 미리 보여준 복선과도 같다는 점을 깨달았다.
+              제가 영화관에서 잘 울진 않지만 기억에 남게 주룩주룩 눈물을 흘렸던 영화입니다.<br>
+              이 영화의 주인공 도그(일 겁니다. 무명인데, 현대사회를 살아가는 우리 누구나를 가리키는 거라 봅니다.)는 외로움에 반려로봇을 집에 들이게 됩니다.<br>
+              둘은 같이 스케이트도 타고, 핫도그도 먹고, 춤도 추고, 여름엔 바닷가도 가며 행복한 나날을 보내는데요, 같이 바닷가를 갔다가 관절에 물이 들어간 로봇이 더이상 움직이지 못하게 됩니다.<br>
+              고철덩어리를 도저히 끌고갈 수 없었던 도그는 하는 수 없이 하루 뒤에 다시 오겠다고 약속하고 모래사장에 로봇을 두는데요, 안타깝게도 그날이 그 해의 해수욕장 운영 마지막 날이었고 도그는 1년을 기다려야 했습니다.<br>
+              그렇게 둘은 서로 돌아올 거라는 믿음으로 각자 1년을 보내게 됩니다<br>
+              이 영화는 무성 영화입니다. 거기다 주인공은 왈왈.. 띠리리.. 라는 소리밖에 못낼법한 강아지와 로봇이죠.<br>
+              그래서 저는 영화를 보면서 그들이 할만한 대사를 맘껏 상상했는데요, 서로가 유일한 친구였던 도그와 로봇의 시절이 아련.. 하게 떠오르고, 우리는 또 그 시절을 추억하면서 새로운 인연을 만들어가는구나 이런 생각이 들어서 감성이 막 차올랐습니다.<br>
+              무엇보다 귀엽고, 따뜻하고, 평화로워서 좋았어요.
             </p>
           </article>
         </section>
@@ -96,13 +109,10 @@
               <div class="comment-item">
                 <div class="comment-author">
                   <img src="./images/comment-author-icon.png" alt="사용자 프로필 이미지" />
-                  <span>방문자</span>
+                  <span>&nbsp가콩</span>
                 </div>
                 <div class="comment-content">
-                  대학생 때 읽었던 모모가 문득 생각나서 다시 펼쳐봤는데, 글쓴이님 말씀처럼 정말 지금 보니까 완전 다르게
-                  다가오더라구요! 회색 신사들이 들려주는 '시간 절약'이란 말이 마치 요즘 유튜브에서 흔히 보이는 '갓생
-                  살기' 영상들 같아서 씁쓸하게 웃었습니다 ㅎㅎ 광안리 해변 이야기는 정말 이 글의 하이라이트인 것 같아요.
-                  저도 이제는 가끔은 멍때리는 시간을 가져야겠어요 :&#41;
+                  로봇드림 꼭 봐야겠어요!!! 심금을 울리는 글이네요... 이런 글을 선물해주셔서 감사합니다 모다 :&#41;
                 </div>
               </div>
             </li>
@@ -110,12 +120,10 @@
               <div class="comment-item">
                 <div class="comment-author">
                   <img src="./images/comment-author-icon.png" alt="사용자 프로필 이미지" />
-                  <span>방문자</span>
+                  <span>&nbsp슬링키</span>
                 </div>
                 <div class="comment-content">
-                  와... 크론이라는 닉네임의 의미를 읽고 푸지 이발사가 딱 떠올랐어요. 저도 회사에서 30분 단위로 시간
-                  쪼개서 일정 관리하다가 얼마 전에 번아웃 왔거든요 😅 시간을 아낀다고 오히려 삶을 놓치고 있었던 것
-                  같아서 마음이 찡했습니다. 글쓴이님 글 덕분에 오늘은 퇴근하고 동네 한 바퀴 돌아야겠어요~
+                  와... 필름 사진 명작인데요? 저도 내일 필카 하나 사겠습니다
                 </div>
               </div>
             </li>
@@ -123,12 +131,21 @@
               <div class="comment-item">
                 <div class="comment-author">
                   <img src="./images/comment-author-icon.png" alt="사용자 프로필 이미지" />
-                  <span>방문자</span>
+                  <span>&nbsp하루</span>
                 </div>
                 <div class="comment-content">
-                  이 글 읽으면서 계속 고개를 끄덕였네요 👍 특히 자기계발서 이야기... 저도 요즘 '갓생살기' 영상 보면서
-                  조급해졌었는데, 모모 다시 읽어봐야겠어요! 시간은 아끼는 게 아니라 느끼는 거라는 말에 완전 공감입니다.
-                  저도 이제는 하루에 한 번은 커피 마시면서 창밖 구경하기로 했어요 ☕️
+                  재밌게 봤습니다^^
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="comment-item">
+                <div class="comment-author">
+                  <img src="./images/comment-author-icon.png" alt="사용자 프로필 이미지" />
+                  <span>&nbsp벨로</span>
+                </div>
+                <div class="comment-content">
+                  모다 bello~~
                 </div>
               </div>
             </li>
