feat : 자기소개 추가

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
           <h3 class="subtitle" id="introduction">자기소개</h3>
           <p>
             안녕하세요 모다입니다~~!!<br>
-
+            모다라는 이름은 모다피에서 따왔구요, 나중에 개발하다가 문제 생기면 '이게 모다?' 라고 드립치고 싶어서 지었습니다.<br>
+            저에 대해 많이 알아가시죠...
           </p>
         </section>
 
